codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__all_models_popup_groups_models_by_provider.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Select Model and Effort
  Access legacy models by running codex -m <model_name> or in your config.toml

› 1. gpt-5.6-sol (current)      Latest frontier agentic coding model.  openai
  2. claude-opus-5 (default)    Claude model claude-opus-5  anthropic
  3. deepseek-v4-pro (default)  DeepSeek model deepseek-v4-pro  deepseek

  Press enter to confirm or esc to go back
