codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__compaction_progress_pass_status.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"• Compacting pass 1/4 (0s • esc to interrupt)                                   "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│❯ Ask Codex to do anything                                                    │"
"╰────────────────────────────────────────────────────────────────────────────0s╯"
"  gpt-5.6-sol default · /tmp/project                                            "
